Fix image source path for X logo in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>EMAIL: <a href="mailto:aalmuaikel@stu.kau.edu.sa">aalmuaikel@stu.kau.edu.sa</a></p>
             <p>PHONE: <a href="tel:+966123456789">+966123456789</a></p>
             <div>
-                <a target="_blank" href="https://x.com/a_almuaikel"><img class="social-media-icon" src="/images/x-icon.png" alt="X logo"></a>
+                <a target="_blank" href="https://x.com/a_almuaikel"><img class="social-media-icon" src="./images/x-icon.png" alt="X logo"></a>
                 <a  target="_blank" href="https://www.linkedin.com/in/abdullah-al-muaikel/" ><img class="social-media-icon"  src="./images/linkedin-icon.png" alt="linkedin logo"></a>
             </div>
         </aside>
